Updated text in index.html

--- a/project-2/index.html
+++ b/project-2/index.html
@@ -26,8 +26,8 @@
     </nav>
     <section id="home">
         <h1 class="h-primary">welcome to my OnlineMeals.com</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, magni. Quod esse nulla corrupti?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p>OnlineMeals.com is the best online food delivery service in india</p>
+        <p>We offer a wide range of food varities.</p>
         <input type="button" class="btn" value="Order now">
     </section>
 
